# pragha

./: .gitignore  COPYING  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: .gitignore  Makefile.am  consonance.1  consonance.desktop  io.github.pragha-music-player.metainfo.xml  io.github.pragha_music_player.metainfo.xml  io.github.pragha_music_player.metainfo.xml.in  pragha.1  pragha.appdata.xml  pragha.desktop  pragha.desktop.in
data/icons/: Makefile.am
data/icons/128x128/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/64x64/: Makefile.am
data/icons/symbolic/: Makefile.am
data/ui/: Makefile.am  pragha.css
plugins/: .gitignore  Makefile.am  pragha-plugin-macros.h
plugins/acoustid/: Makefile.am  acoustid.plugin  pragha-acoustid-plugin.c
plugins/ampache/: Makefile.am  ampache.plugin  pragha-ampache-plugin.c  pragha-ampache-plugin.h
plugins/android-client/: Makefile.am  android-client.plugin  pragha-android-plugin.c  pragha-android-plugin.h  praghathreadedsocketservice.c  praghathreadedsocketservice.h
plugins/cdrom/: Makefile.am  cdrom.plugin  pragha-cdrom-plugin.c  pragha-cdrom-plugin.h
plugins/devices/: Makefile.am  devices.plugin  pragha-device-client.c  pragha-device-client.h  pragha-devices-block.c  pragha-devices-block.h  pragha-devices-cd.c  pragha-devices-cd.h  pragha-devices-mtp.c  pragha-devices-mtp.h  pragha-devices-plugin.c  pragha-devices-plugin.h
plugins/dlna/: Makefile.am  dlna.plugin  pragha-dlna-plugin.c  pragha-dlna-plugin.h
plugins/dlna-renderer/: Makefile.am  dlna-renderer.plugin  pragha-dlna-renderer-plugin.c  pragha-dlna-renderer-plugin.h
plugins/gnome-media-keys/: Makefile.am  gnome-media-keys.plugin  pragha-gnome-media-keys-plugin.c  pragha-gnome-media-keys-plugin.h
plugins/keybinder/: Makefile.am  keybinder.plugin  pragha-keybinder-plugin.c  pragha-keybinder-plugin.h
plugins/koel/: Makefile.am  koel.plugin  pragha-koel-plugin.c  pragha-koel-plugin.h
plugins/lastfm/: Makefile.am  lastfm.plugin  pragha-lastfm-menu-ui.h  pragha-lastfm-menu.ui  pragha-lastfm-plugin.c
plugins/mpris2/: Makefile.am  mpris2.plugin  pragha-mpris2-plugin.c  pragha-mpris2-plugin.h
plugins/mtp/: Makefile.am  mtp.plugin  pragha-devices-mtp.c  pragha-devices-mtp.h  pragha-mtp-musicobject.c  pragha-mtp-musicobject.h  pragha-mtp-thread-data.c  pragha-mtp-thread-data.h  pragha-mtp-thread.c  pragha-mtp-thread.h
plugins/notify/: Makefile.am  notify.plugin  pragha-notify-plugin.c
plugins/removable-media/: Makefile.am  pragha-devices-removable.c  removable.plugin
plugins/song-info/: Makefile.am  pragha-song-info-cache.c  pragha-song-info-cache.h  pragha-song-info-configurable.c  pragha-song-info-configurable.h  pragha-song-info-dialog.c  pragha-song-info-dialog.h  pragha-song-info-pane.c  pragha-song-info-pane.h  pragha-song-info-plugin.c  pragha-song-info-plugin.h  pragha-song-info-thread-albumart.c  pragha-song-info-thread-albumart.h  pragha-song-info-thread-artistart.c  pragha-song-info-thread-artistart.h  pragha-song-info-thread-dialog.c  pragha-song-info-thread-dialog.h  pragha-song-info-thread-pane.c  pragha-song-info-thread-pane.h  pragha-song-info.ui  song-info.plugin
plugins/subsonic/: Makefile.am  pragha-subsonic-api.c  pragha-subsonic-api.h  pragha-subsonic-plugin.c  pragha-subsonic-plugin.h  pragha-subsonic-preferences.c  pragha-subsonic-preferences.h  subsonic.plugin
plugins/tunein/: Makefile.am  pragha-tunein-plugin.c  tunein.plugin
plugins/visualizer/: Makefile.am  pragha-visualizer-particle.c  pragha-visualizer-particle.h  pragha-visualizer-plugin.c  pragha-visualizer-plugin.h  pragha-visualizer.c  pragha-visualizer.h  visualizer.plugin
po/: .gitignore  LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  ar.po  bg.po  ca.po  ca_ES.po  cs.gmo  cs.mo  cs.po  da.po  de.gmo  de.mo  de.po  el.po  es.gmo  es.mo  es.po  fr.gmo  fr.po  hu.gmo  hu.po  id.po  it.po  ja.gmo  ja.po  ko_KR.po  lt.po  nl.gmo  nl.po  no.gmo  no.po  pl.gmo  pl.po  pragha.pot  pt.gmo  pt.mo  pt.po  (+14 more)
src/: .gitignore  Makefile.am  Makefile.in  album.c  artist.c  audio.c  bind.c  cdda.c  cdda.h  chartlyrics_helper.c  chartlyrics_helper.h  cmdline.c  consonance.c  consonance.h  current-playlist.c  current_playlist.c  db.c  dbus.c  eggtrayicon.c  equalizer.c  file-utils.c  filetree.c  flac.h  glyr-related.c  glyr-related.h  gnome-media-keys.c  gnome-media-keys.h  gtkcellrendererbubble.c  gtkcellrendererbubble.h  gudev-devices.c  gui.c  hig.c  hig.h  info-bar-import-music.c  init.c  jumptotrack.c  keybinder.c  lastfm.c  lastfm.h  lfm_helper.c  (+178 more)
src/plugins/: Makefile.am
src/plugins/gnome-media-keys/: Makefile.am  pragha-gnome-media-keys-plugin.c  pragha-gnome-media-keys-plugin.h
src/plugins/helloworld/: Makefile.am  helloworld.plugin  peasdemo-hello-world-configurable.c  peasdemo-hello-world-configurable.h  peasdemo-hello-world-plugin.c  peasdemo-hello-world-plugin.h
src/plugins/keybinder/: Makefile.am  pragha-keybinder-plugin.c  pragha-keybinder-plugin.h
src/plugins/mpris2/: pragha-mpris2-plugin.c  pragha-mpris2-plugin.h
src/plugins/song-info/: Makefile.am  pragha-song-info-configurable.c  pragha-song-info-dialog.c  pragha-song-info-plugin.c  pragha-song-info-plugin.h  song-info.plugin
src/win32/: Makefile.am  win32dep.h
win32/: Makefile.am  README  codecs.iss  inno-setup.iss  pragha.rc  settings.ini  win32dep.c
